2012-10-25  Nandor Huszka  <hnandor@inf.u-szeged.hu>

        [Qt] Unreviewed gardening.

        Unskip tests that are not exist already.

        * platform/qt-5.0-wk2/TestExpectations:

2012-10-25  Nandor Huszka  <hnandor@inf.u-szeged.hu>

        [Qt] Unreviewed gardening.

        Skip a new failing test introduced in r132394.

        * platform/qt-5.0-wk2/TestExpectations:

2012-10-24  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt] Unreviewed gardening, skip a new failing test.

        * platform/qt/TestExpectations:

2012-10-24  Kent Tamura  <tkent@chromium.org>

        REGRESSION(r132291): Crash in BaseMultipleFieldsDateAndTimeInputType
        https://bugs.webkit.org/show_bug.cgi?id=100326

        Reviewed by Eric Seidel.

        * fast/forms/time-multiple-fields/time-multiple-fields-change-type-expected.txt: Added.
        * fast/forms/time-multiple-fields/time-multiple-fields-change-type.html: Added.

2012-10-24  Pavel Feldman  <pfeldman@chromium.org>

        Not reviewed: updating chromium TestExpectations for the roll.

        * platform/chromium/TestExpectations:

2012-10-24  Pavel Feldman  <pfeldman@chromium.org>

        Not reviewed: updating chromium TestExpectations for the roll.

        * platform/chromium/TestExpectations:

2012-10-24  Pavel Feldman  <pfeldman@chromium.org>

        Not reviewed: platform/chromium/TestExpectations lint.

        * platform/chromium/TestExpectations:

2012-10-24  Kangil Han  <kangil.han@samsung.com>

        Rebaseline some sputnik unicode failed cases.
        https://bugs.webkit.org/show_bug.cgi?id=99976

        Unreviewed rebaseline.

        According to BUG 93103, seems these four test cases have different results after libicu 4.6 version.
        As Ubuntu 12.04 installs 4.8 and mac has same result with windows, expected results on BUG 93103 could replace common result file except chromium-mac-snowleopard.
